--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,8 @@
-asgiref==3.4.1
-backports.entry-points-selectable==1.1.1
-certifi==2021.10.8
-distlib==0.3.3
 Django==3.2.9
 django-crispy-forms==1.13.0
+django-model-utils==4.2.0
+django-star-ratings==0.9.2
 django-widget-tweaks==1.4.12
-filelock==3.4.0
+mysql-connector-python==8.0.28
 numpy==1.21.4
-Pinax==0.9a2
-pipenv==2021.11.23
-platformdirs==2.4.0
-pytz==2021.3
-six==1.16.0
-sqlparse==0.4.2
-virtualenv==20.10.0
-virtualenv-clone==0.5.7
+
